--- a/404.html
+++ b/404.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=/" />
-  </head>
-  <body>
-    <p>If you are not redirected, <a href="/">click here</a>.</p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Redirecting...</title>
+  <script>
+    (function () {
+      // 获取当前路径，比如 /cv/ 或 /projects/
+      const path = window.location.pathname;
+
+      // 构造 hash 路由，例如 "/#/cv/"
+      const newUrl = '/' + '#' + path;
+
+      // 跳转到首页，并保留当前路径信息
+      window.location.replace(newUrl);
+    })();
+  </script>
+</head>
+<body>
+  <p>Redirecting...</p>
+</body>
 </html>
